<resources>
    <string name="app_name">GitFit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_journal">Journal</string>
    <string name="title_profile">Profile</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="register_button_text">Register</string>
    <string name="activity_goals_title">Activity goals</string>
    <string name="lines_of_code">Lines of code</string>
    <string name="cups_of_coffee">Cups of coffee</string>
    <string name="duration">Duration</string>
    <string name="lines_of_code_goal_hint">Enter your daily lines of code goal</string>
    <string name="cups_of_coffee_goal_hint">Enter your daily cups of coffee goal</string>
    <string name="about_you_title">About you</string>
    <string name="title_info">Info</string>
    <string name="activity_drinking_coffee">Drinking coffee</string>
    <string name="activity_code_addition">Code addition</string>
    <string name="activity_table_tennis">Table tennis</string>
    <string name="activity_console_game">Console game</string>
    <string name="cup">cup(s)</string>
    <string name="line">line(s)</string>
    <string name="points">point(s)</string>
    <string name="minute">minute(s)</string>
    <string name="sync">Sync</string>
    <string name="activity_type">Activity Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="value">Value</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_activity">Add Activity</string>
    <string name="Save">Save</string>
    <string name="delete">delete</string>
    <string name="delete_dialog_message">Are you sure, you want to delete this activity?</string>
    <string name="yes_button">yes</string>
    <string name="no_button">no</string>
    <string name="ok">OK</string>
    <string name="sign_out">Sign Out</string>
    <string name="slash">/</string>
</resources>
