<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.gitfit.android.ui.DataBindingConverters" />
        <variable
            name="viewModel"
            type="com.gitfit.android.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:padding="10dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.user.firstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:padding="10dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/first_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.user.lastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lines_of_code_goal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lines_of_code_goal_hint"
            android:padding="10dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/last_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/linesOfCodeGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={DataBindingConverters.convertIntToString(viewModel.user.linesOfCodeGoal)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cups_of_coffee_goal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cups_of_coffee_goal_hint"
            android:padding="10dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/lines_of_code_goal_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cupsOfCoffeeGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={DataBindingConverters.convertIntToString(viewModel.user.cupsOfCoffeeGoal)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onRegisterButtonClick()}"
            android:text="@string/register_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>