<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.gitfit.android.ui.DataBindingConverters" />
        <variable
            name="viewModel"
            type="com.gitfit.android.ui.home.home.addActivity.AddActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/edit_activity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".ui.home.journal.editActivity.EditActivityDialogFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filled_exposed_dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_type">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                tools:ignore="Deprecated,LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_edit_activity"
            android:hint="@string/value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={DataBindingConverters.convertIntToString(viewModel.value)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/activity_goals_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_add_activity"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:onClick="@{() -> viewModel.onDateLayoutClick(true)}"
                    android:text="@{viewModel.dateTime.format(viewModel.dateFormatter)}"
                    tools:ignore="Deprecated" />

            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_edit_text"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:onClick="@{() -> viewModel.onTimeLayoutClick(true)}"
                    android:text="@{viewModel.dateTime.format(viewModel.timeFormatter)}"
                    tools:ignore="Deprecated" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/vertical_margin_edit_activity"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> viewModel.onCancelButtonClick()}"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onSaveButtonClick()}"
                android:text="@string/save" />


        </LinearLayout>


    </LinearLayout>

</layout>
