<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/title_profile" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profile_logo_text"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:text="A"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_details_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profile_logo_text"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/profile_names_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Adrian Twarowski"
                        android:textColor="@color/grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="adikooos"
                        app:layout_constraintStart_toStartOf="@id/profile_names_text"
                        app:layout_constraintTop_toBottomOf="@id/profile_names_text" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/ic_arrow_drop_down_black_24dp"
                        app:layout_constraintBottom_toBottomOf="@id/profile_username_text"
                        app:layout_constraintStart_toEndOf="@id/profile_username_text"
                        app:layout_constraintTop_toTopOf="@id/profile_username_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/activity_goals_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/activity_goals_title"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="@id/profile_layout"
                app:layout_constraintTop_toBottomOf="@id/profile_layout" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_goals_text" />


            <LinearLayout
                android:id="@+id/activity_goals_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:baselineAligned="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/profile_layout"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/code_lines_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lines_of_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/code_lines_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/coffee_cups_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cups_of_coffee">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/coffee_cups_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

